[package]
name = "ink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
crossterm = "0.24.0"
tokio = { version = "1.20.1", features = ["macros", "net", "rt-multi-thread"] }
tui = "0.18.0"
squidserver = { path = "../squidserver" }