[package]
name = "jellyfish"
version = "0.1.0"
edition = "2021"

[dependencies]
guid-create = { version = "0.2", features = ["serde"] }
rocket = { version = "0.5.0-rc.2", features = ["json"], optional = true }
reqwest = { version = "0.11", optional = true, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
rocket = ["dep:rocket"]
request = ["dep:reqwest"]
