[package]
name = "squid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
guid-create = "0.2"
directories = "4.0.1"
jellyfish = { version = "0.1.0", path = "../jellyfish", features = ["request"] }
tar = "0.4.38"
compression = "0.1.5"
tokio = { version = "1.20", features = ["macros"] }
trauma = "2.0"
colored = "2.0.0"
rayon = "1.5.3"
serde = { version = "1.0.140", features = ["derive"] }
toml = "0.5"
