[package]
name = "squidserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.20", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
