[package]
name = "squidserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
jellyfish = { version = "0.1.0", path = "../jellyfish" }
serde = { version = "1.0", features = ["derive"] }
string-error = "0.1.0"
tokio = { version = "1.20", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.5.9"
tracing = "0.1"
tracing-subscriber = "0.3"
